﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-04-20
	Internal: Improve exit cleanup.
	Internal: Various async code changes.
### 2019-04-19
	Internal: Lots of quality of life changes to internal code, especially to configuration changes.
### 2019-04-17
	Changed: A lot of start-up output was removed or bundled up into fewer lines.
### 2019-04-16
	Added: Process start & exit logging. Configured per rule and disabled by default. (requested by Chairkicker Nick)
	Internal: More re-organizing. Should have no impact on users.
	Internal: UI building. Should have no impact on users.
	Internal: Better scoping of variables so they don't linger forever.
	Changed: Filename and pathname validation is relaxed. It will now allow some invalid input but at least it shouldn't get stuck on user just clicking about.
### 2019-04-11
	Added: Network packet counter. Testing where and what would be best.
### 2019-04-07
	Added: Better logging of session end auto-exit.
### 2019-04-06
	Fixed: Null reference error in relation to watchlist. The internal cache was not treated correctly.
### 2019-03-30
	Changed: Paging is no longer misleadingly enabled in [Component] section and is instead in [Options].
	Fixed: Small typos.
	Fixed: IPv4 changes were not reacted to properly due to a typo.
	Internal: Variety of minor non-specific improvements.
### 2019-03-27
	Internal: Some major internal overhauling.
### 2019-03-25
	Fixed: IPC does not work.
	Added: Secondary TM process dialog cancellation now calls for refresh instead of nothing.
### 2019-03-19
	Fixed: System32 ignore warning was flipped.
	Changed: Default path visibility changed from invalid to process.
	Fixed: Array handling that was breaking new installations.
	Fixed: Main window lists GPU even if related component is disabled.
	Fixed: Empty arrays break things.
### 2019-03-18
	Internal: Restructuring. Should not affecting end-users.